--- a/public/index.css
+++ b/public/index.css
@@ -26,11 +26,12 @@
 }
 
 .bag {
-  padding: 10px;
+  padding: 25px;
   color: lightgrey;
   font-size: 20px;
   font-weight: bolder;
   text-align: center;
+  display: block;
 }
 
  .sticky-top {
@@ -42,7 +43,7 @@
   float: right;
 }
 #main-column {
-  width: 400px;
+  width: 700px;
 }
 
 .navbar {
@@ -51,12 +52,13 @@
 }
 
 .img-cart > img{
-  display:  table-cell; 
-  vertical-align: middle; 
-  text-align: center;
+  position: absolute;
+  display:  center; 
+  /* text-align: center; */
+  margin-left: 20%;
   filter: grayscale(30%);
   width:60%;
-  height: 60%;
+  height: 40%;
 }
 
 .userimage {
@@ -69,151 +71,37 @@
 
 }
 
-img #app{
-  width: 30%;
-}
-
-
-/* ------- */
-.body{
-  background-color: #efefef;
-}
-.menuItem {
-  display: inline-block;
-  background-color:#e9dddd;
-  padding:3%;
-  margin:2px;
-  text-align: top;
-  border-radius: 1%;
-  width:100%;
-}
-.itemName{
-  background-color: white;
-  position: relative;
-  display: inline-block;
-  border: 2px solid white;
-  border-radius: 5px;
-  padding: 4px;
-  margin: 2px;
-  width:46%;
-}
-img{
-  display: block;
-  height: 92px;
-  width: 100px;
-  float: right; 
-}
-img.lg{
-  display:block;
-  width: 66%;
-  height: 70%;
-  float: left;
-}
-img.md{
-  display: inline-block;
-  width: 33%;
-  height: 186px;
-}
-.display{
-  background-color:#e9dddd;
-  display: block;
-  position: relative;
+div.display {
   width: 100%;
-  height: 405px;
-  overflow: hidden;
-  text-align: right;
-  margin-bottom: 5px;
-  border-radius: 2px;
-}
-.text{
-  position: absolute;
-  font-size: 12px;
-    margin-top: 40px;
-    font-size: 12px;
-    display: flex;
-    width: 66%;
-}
-.name {
-  display: inline;
-  margin: 5px;
-  color: blue;
-}
-h3{
-  width: 66%;
-}
-.price{
-  position: absolute;
-    right: 4px;
-    top: 2px;
-    font-weight: bold;
-}
-.priceTag1{
-  z-index:10;
-  display: block;
-  width: 235px;
-    height: 65px;
-    display: block;
-    position: absolute;
-    left: 587px;
-    top: 283px;
-    background-color: #faebd7b8;
-    border-radius: 11px;
-    text-align: center;
-}
-.priceTag2{
-  z-index: 10;
-    width: 235px;
-    height: 65px;
-    display: flex;
-    position: absolute;
-    right: 4px;
-    top: 100px;
-    background-color: #faebd7b8;
-    border-radius: 11px;
-    text-align: center;
-
-}
-.priceTag3{
-  z-index:10;
-  width:300px;
-  height: 80px;
-  display: block;
-  position: relative;
-  right: -190px;
-  top: 254px;
-  background-color: #faebd7b8;
-  border-radius: 11px;
-  text-align: center;
-}
-.priceTag3 h3 {
-  left: 117px;
-    top: 36px;
-    display: flex;
-}
-.priceTag3 h2 {
-  left: 119px;
-  display: flex;
-}
-.cantainer {
-  position: absolute;
-}
-.modal{
-  z-index: 10000;
-  background-color: #8f626285;
-  position: absolute;
-  width: 500px;
-  height: 600px;
-
+  background-color: rgb(242, 244, 247);
 }
 
-
-.price{
-  position: absolute;
-  display: flex;
-
-
+div.menuItem {
+  width: 100%;
+  background-color: rgb(242, 244, 247);
 }
 
+#app {
+  background-color: rgb(242, 244, 247);
+}
 
-/* --------Ash */
+h4.name {
+  font-size: 15px;
+  font-weight: bolder;
+}
 
+div.text {
+  margin-top: 4px;
+}
+
+/* ----------------- */
+
+.popover__content {
+  left: auto!important;
+  top: auto !important;
+  position: absolute !important;
+}
+
+.item-container:hover .item-subcontainer {
+  background-color: rgb(214, 215, 216);
+}
